--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,9 @@ In progress:
 * record scan
   - flag entries in hash table as hashed
 
+20140323
+* worked on Python bindings
+
 20140317
 * worked on setup.py
 
