--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,9 @@ In progress:
 * record scan
   - flag entries in hash table as hashed
 
+20140930
+* removed README.macosx
+
 20140731
 * bug fix in Python-bindings
 
