Changes for deployment.

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,10 @@ In progress:
 * record scan
   - flag entries in hash table as hashed
 
+20141024
+* changes for deployment
+* changes for project site move
+
 20141019
 * changes for deployment
 
