--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 libmsiecf is a library to access the Microsoft Internet Explorer (MSIE) Cache File (index.dat) files.
 
+Project information:
+* Status: alpha
+* Licence: LGPLv3+
+
 Planned:
 * Multi-threading support
 * Python 3 support
