Changes for deployment.

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,9 @@ In progress:
 * record scan
   - flag entries in hash table as hashed
 
+20141025
+* changes for deployment
+
 20141024
 * changes for deployment
 * changes for project site move
