--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,10 @@ In progress:
 * record scan
   - flag entries in hash table as hashed
 
+20141222
+* worked on Python 3 support
+* worked on tests
+
 20141130
 * code clean up
 
