--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,9 @@ In progress:
 * record scan
   - flag entries in hash table as hashed
 
+20150308
+* worked on Python bindings cache directory support
+
 20150106
 * 2015 update
 
